--- a/icon.css
+++ b/icon.css
@@ -6,20 +6,23 @@ font-family: Microsoft JhengHei;
 	width:100%;
 	height:100%;
 	animation-name: fadeIn;
-	animation-duration: 3s;
+	animation-duration: 0.1s;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
   z-index:100;
+  animation-delay:6s;
 }
 @keyframes fadeIn {
   from {
     height:100%;
 	width:100%;
+	opcity:1;
   }
   
   to {
      height:0;
 	width:0;
+	opcity:0;
   }
 }
 #icons1{
