--- a/icon.css
+++ b/icon.css
@@ -38,13 +38,34 @@ font-family: Microsoft JhengHei;
 	line-height:5vh;  
 }
 .icons{
-	height:180px;
-	width:180px;
+	height:1px;
+	width:1px;
 	margin-left:30px;
-	margin-top:300px;
+	
 	transform-origin: 50% 50%;
     transition: transform 5s linear;
 	z-index:1;
+	animation-name: fadeIn2;
+	animation-duration: 0.1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+
+  animation-delay:6s;
+}
+@keyframes fadeIn2 {
+  from {
+    height:0;
+	width:0;
+	opcity:0;
+	margin-top:0;
+  }
+  
+  to {
+	  height:180px;
+	  width:180px;
+     margin-top:300px;
+	opcity:1;
+  }
 }
 .icons:hover{
 	transform: scale(1.2) rotate(0.1deg);}
