--- a/index.css
+++ b/index.css
@@ -1,22 +1,29 @@
 body{
 background-color:#064F7C;
 font-family: Microsoft JhengHei;
+margin:0;
+max-width:100%;
 }
 #wrapper{
-position:absolute;}
+position:absolute;
+}
 #logo{
-margin-top:200px;
-margin-left:30%;
-position:relative;
 height:200px;
 width:600px;
+position:relative;
+margin-left:30%;
+margin-top:200px;
 }
 a{
 background:#FFD805;
 color:#064F7C;
 text-decoration:none;
 border-radius:10px;
-padding:3 15 3 15px;
+padding-left:3px;
+padding-right:3px;
+padding-top:3px;
+padding-bottom:3px;
+
 margin-top:5px;
 margin-left:900px;
 text-transform:uppercase;
